fixes Evoker droppt Totem